kubernetes/rate-limit/rate-limit-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limit
  labels:
    app: rate-limit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limit
  template:
    metadata:
      labels:
        app: rate-limit
    spec:
      containers:
      - name: ratelimit
        image: envoyproxy/ratelimit:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
        - containerPort: 8080
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: rate-limit
  labels:
    app: rate-limit
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: rate-limit
